# researchgate-hub

./: .gitignore  README.md  pyproject.toml
src/jupyter_notebooks/: publications-matadata.ipynb
src/jupyter_notebooks/data/: citations_edges.csv  citations_publications.csv  edges.csv  nodes.csv
src/researchgate_hub/: citations.py  config.py  main.py  publications.py  publications_metadata.py
src/researchgate_hub/processed/: citations_edges.csv  citations_publications.csv  publications_raw.csv
src/researchgate_hub/processed/tmp/: unique_ids.csv
